--- a/GoogleDrive/Podfile
+++ b/GoogleDrive/Podfile
@@ -1,4 +1,4 @@
 xcodeproj 'GoogleDrive.xcodeproj'
 platform :ios, '7.0'
          
-pod 'AeroGear',  :git => 'https://github.com/cvasilak/aerogear-ios.git', :branch => 'AGIOS-195.fluid.refresh.review'
+pod 'AeroGear',  :git => 'https://github.com/aerogear/aerogear-ios.git'
